@@ -1,16 +1,22 @@
 package com.fixzone.fixzon_backend.service;
 
+import com.fixzone.fixzon_backend.DTO.NotificationDTO;
+import com.fixzone.fixzon_backend.DTO.ServiceCenterDTO;
+import com.fixzone.fixzon_backend.DTO.UserDTO;
 import com.fixzone.fixzon_backend.model.ServiceCenter;
 import com.fixzone.fixzon_backend.model.User;
-import com.fixzone.fixzon_backend.entity.Notification;
+import com.fixzone.fixzon_backend.model.Notification;
 import com.fixzone.fixzon_backend.repository.ServiceCenterRepository;
 import com.fixzone.fixzon_backend.repository.UserRepository;
 import com.fixzone.fixzon_backend.repository.NotificationRepository;
+import org.springframework.beans.BeanUtils;
 import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.Map;
 import java.util.HashMap;
+import java.util.Objects;
 import java.util.UUID;
+import java.util.stream.Collectors;
 
 @Service
 public class AdminService {
@@ -29,14 +35,15 @@ public class AdminService {
 
     // --- Service Center Management ---
 
-    public List<ServiceCenter> getPendingServiceCenters() {
-        // Assuming model.ServiceCenter has a status field now
+    public List<ServiceCenterDTO> getPendingServiceCenters() {
         return serviceCenterRepository.findAll().stream()
                 .filter(sc -> "PENDING".equals(sc.getStatus()))
-                .toList();
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
-    public ServiceCenter approveServiceCenter(UUID id) {
+    public ServiceCenterDTO approveServiceCenter(UUID id) {
+        Objects.requireNonNull(id, "ID must not be null");
         ServiceCenter sc = serviceCenterRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Service Center not found"));
         sc.setStatus("APPROVED");
@@ -46,39 +53,46 @@ public class AdminService {
         createNotification(sc.getOwner(), "Registration Approved", 
             "Your service center '" + sc.getName() + "' has been approved.", "SUCCESS");
             
-        return serviceCenterRepository.save(sc);
+        return convertToDTO(serviceCenterRepository.save(sc));
     }
 
-    public ServiceCenter rejectServiceCenter(UUID id, String reason) {
+    public ServiceCenterDTO rejectServiceCenter(UUID id, String reason) {
+        Objects.requireNonNull(id, "ID must not be null");
         ServiceCenter sc = serviceCenterRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Service Center not found"));
         sc.setStatus("REJECTED");
         sc.setIsActive(false);
+        sc.setRejectionReason(reason);
         
         createNotification(sc.getOwner(), "Registration Rejected", 
             "Your registration for '" + sc.getName() + "' was rejected. Reason: " + reason, "WARNING");
             
-        return serviceCenterRepository.save(sc);
+        return convertToDTO(serviceCenterRepository.save(sc));
     }
 
-    public ServiceCenter updateServiceCenterStatus(UUID id, String status) {
+    public ServiceCenterDTO updateServiceCenterStatus(UUID id, String status) {
+        Objects.requireNonNull(id, "ID must not be null");
         ServiceCenter sc = serviceCenterRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Service Center not found"));
         sc.setStatus(status); // SUSPENDED, ACTIVE
-        return serviceCenterRepository.save(sc);
+        return convertToDTO(serviceCenterRepository.save(sc));
     }
 
-    // --- User Account Management ---
+    // --- User Account Management & Platform Security ---
+    // Methods for managing global user access, status transitions, and administrative oversight.
 
-    public User updateUserStatus(UUID id, String status) {
+    public UserDTO updateUserStatus(UUID id, String status) {
+        Objects.requireNonNull(id, "ID must not be null");
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found"));
         user.setStatus(status); // Active, Suspended
-        return userRepository.save(user);
+        return convertToDTO(userRepository.save(user));
     }
 
-    public List<User> getAllUsers() {
-        return userRepository.findAll();
+    public List<UserDTO> getAllUsers() {
+        return userRepository.findAll().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
     }
 
     // --- Dashboard & Stats ---
@@ -103,11 +117,42 @@ public class AdminService {
         notificationRepository.save(note);
     }
     
-    public List<Notification> getAdminNotifications() {
-        return notificationRepository.findAll(); 
+    public List<NotificationDTO> getAdminNotifications() {
+        return notificationRepository.findAll().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList()); 
     }
 
-    public List<ServiceCenter> getAllServiceCenters() {
-        return serviceCenterRepository.findAll();
+    public List<ServiceCenterDTO> getAllServiceCenters() {
+        return serviceCenterRepository.findAll().stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
+
+    // --- Mapping Helpers ---
+
+    private ServiceCenterDTO convertToDTO(ServiceCenter sc) {
+        ServiceCenterDTO dto = new ServiceCenterDTO();
+        BeanUtils.copyProperties(sc, dto);
+        if (sc.getOwner() != null) {
+            dto.setOwnerId(sc.getOwner().getUserId());
+        }
+        return dto;
+    }
+
+    private UserDTO convertToDTO(User user) {
+        UserDTO dto = new UserDTO();
+        BeanUtils.copyProperties(user, dto);
+        return dto;
+    }
+
+    private NotificationDTO convertToDTO(Notification note) {
+        NotificationDTO dto = new NotificationDTO();
+        BeanUtils.copyProperties(note, dto);
+        if (note.getRecipient() != null) {
+            dto.setRecipientId(note.getRecipient().getUserId());
+        }
+        return dto;
     }
 }
+
